<resources>
    <string name="api_media_ccc_url" translatable="false">https://api.media.ccc.de</string>
    <string name="streaming_media_ccc_url" translatable="false">https://streaming.media.ccc.de</string>
    <string name="app_name" translatable="false">Chaosflix</string>

    <!--Actions-->
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="start_again">Start again</string>
    <string name="resume">Resume</string>
    <string name="resume_question">Resume previous position or start from beginning</string>
    <string name="return_to_homescreen">Return to Homescreen</string>
    <string name="bookmark">Bookmark</string>

    <!--Content-->
    <string name="related_movies">Related Videos</string>
    <string name="random_talks_on_this_track">Random Talks in the same Track</string>
    <string name="random_talks">Other random Talks at this Conference</string>
    <string name="related_talks">Related Talks</string>
    <string name="recordings">Recordings</string>
    <string name="conferences">Conferences</string>
    <string name="recommendations">Recommendations</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="mediaplayer">Media-Player</string>

    <!--Watchlist-->
    <string name="watchlist_dialog_needed">new-watchlist</string>
    <string name="watchlist_message">You can find you watchlist on the Homescreen of Chaosflix</string>
    <string name="watchlist">Watchlist</string>
    <string name="remove_from_watchlist">Remove from Watchlist</string>
    <string name="add_to_watchlist">Add to Watchlist</string>

    <!--Error Messages-->
    <string name="oops">Oops</string>
    <string name="error_event_not_found">Event not found</string>
    <string name="no_recording_found_for">No Recording found for</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="cast_error">Error casting (Code: %d)</string>

    <!--Livestreams-->
    <string name="streaming_prefix">[streaming]</string>
    <string name="streams">Streams</string>
    <string name="livestreams">Livestreams</string>

    <!--About-->
    <string name="about_chaosflix">About Chaosflix</string>
    <string name="about">About Chaosflix</string>
    <string name="privacy_policy">Chaosflix does not collect or transmit any personalized data.</string>
    <string name="about_description">Chaosflix was developed, because the developer was annoyed
	that there was an app for Apple-TV but not Android- and Fire-TV. So now, after the
	TV-app there is also one for (android) phones and tablets. Enjoy!</string>
    <string name="related_events">Related Events</string>
    <string name="about_github">Find the source on Github</string>
    <string name="about_beta">Become a beta tester</string>
    <string name="about_twitter">Follow the developer on Twitter</string>
    <string name="about_playstore">Rate us on Google Play</string>
    <string name="about_title">Chaosflix</string>
    <string name="about_voctocat"> The Vocotocat-Logo was designed by Sebastian Morr and is released under CC BY-NC-SA 4.0</string>
    <string name="chaosflix_licence">Chaosflix is released under MIT-License.</string>

    <!--Preferences-->
    <string name="watchlist_preferences_key">watchlist</string>
    <string name="clean_cache">Clean Cache</string>
    <string name="download_folder">Download folder</string>
    <string name="pref_autoselect_recording">Don\'t show selection dialog, just use HD-mp4</string>
    <string name="pref_autoselect_stream">Don\'t show selection dialog, just use DASH</string>
    <string name="pref_mobile_downloads">Enable downloads over mobile or paid networks</string>
    <string name="export_favorites">Export Favorites</string>
    <string name="import_favorites">Import to Favorites</string>
    <string name="pref_external_player">Always use external player</string>
    <string name="setting_choose_stream">Automatically choose stream</string>
    <string name="setting_metered_networks">Allow downloads over metered networks</string>
    <string name="settings_choose_recording">Automatically choose recording</string>

    <string name="preference_key_darkmode_setting" translatable="false">preference_darkmode_setting</string>
    <string name="always_dark">Always use darkmode</string>
    <string name="always_light">Always use light mode</string>
    <string name="system_default">Use system default</string>
    <string name="setting_debug">Enable debug settings</string>

    <string name="one_more_time">Just one more time …</string>
    <string name="debug_enabled">Debug Mode enabled!</string>
    <string name="debug_soon">Debug Mode will be enabled soon!</string>

    <!--Moved from touch-->
    <string name="thumbnail">thumbnail</string>
    <string name="search_title">Search</string>
    <string name="download">Download</string>
    <string name="downloads">Downloads</string>
    <string name="delete">Delete</string>
    <string name="titleimage">TitleImage</string>
    <string name="search_events">Search Events</string>
    <string name="search_talks">Search Talks</string>
    <string name="event_details_image_thumbnail_description">Thumbnail-picture for this event</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="preferences">Preferences</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="delete_local_file">Delete local File</string>
    <string name="showLibs">Libraries we use</string>
    <string name="reload">Reload</string>
    <string name="no_livestreams">Currently no livestreams</string>
    <string name="share_description">Watch this video from media.ccc.de</string>
    <string name="select_stream">Select Stream</string>
    <string name="play_button">Play-Button</string>
    <string name="list_of_events">List of Events</string>
    <string name="delete_item">Delete Item</string>
    <string name="import_activity_label">Fahrplan-Import</string>
    <string name="select_all">Select all</string>
    <string name="play_in_external_player">Play in external player</string>
    <string name="open_link">Open Fahrplan Link</string>
    <string name="share">Share</string>

    <string name="download_started">Download started</string>
    <string name="storage_permission_required">Storage access is required to download videos</string>
    <string name="share_info_error">Could not find share information</string>
    <string name="generic_error">An Error occurred</string>

    <string name="latest_releases">Conferences with recent releases</string>
    <string name="latest_events">Most recent releases</string>

    <string name="cache_stats">Conferences: %d \nEvents: %d \nRecordings: %d</string>
</resources>
